# fiap_tech_challenge_4.2

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
docker/: Dockerfile  entrypoint.sh
notebooks/variaveis de ambiente/: .env.local  ffmpeg_testes.ipynb
scripts/: inspecao_de_variaveis.py  sample_eval.py  verificar_dispositivo_torch.py
src/ftc4/app/: streamlit_app.py
src/ftc4/core/: config.py  device.py  logging.py
src/ftc4/io/: audio_utils.py  downloader.py
src/ftc4/nlp/: generate.py  model_presets.py  postprocess.py  prompts.py  transcribe.py
src/ftc4/schemas/: types.py
src/ftc4/tools/: check_torch_device.py
src/ftc4/training/: finetune.py
src/ftc4/utils/: filehash.py  validators.py
tests/: test_audio_utils.py  test_device.py  test_generate.py
